--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-346.5KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32000, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-318.1KB/s(Youtube:不良林), server: 85.208.108.94, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
-  - {name: 🇯🇵 日本-604.5KB/s(Youtube:不良林), server: 85.208.108.94, port: 5001, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇺🇸 美国-1.29MB/s(Youtube:不良林), server: 169.197.141.5, port: 3306, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇺🇸 美国-150.5KB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-680.0KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33002, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-753.6KB/s(Youtube:不良林), server: 85.208.108.94, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
-  - {name: 🇯🇵 日本-1.05MB/s(Youtube:不良林), server: 85.208.108.94, port: 8000, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
-  - {name: 🇯🇵 日本-2.57MB/s(Youtube:不良林), server: 85.208.108.94, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
-  - {name: 🇫🇷 法国-1.02MB/s(Youtube:不良林), server: 62.210.113.98, port: 5001, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇫🇷 法国-545.1KB/s(Youtube:不良林), server: 62.210.113.98, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇯🇵 日本-1.33MB/s(Youtube:不良林), server: 85.208.108.94, port: 8008, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
+  - {name: 🇯🇵 日本-466.0KB/s(Youtube:不良林), server: 85.208.108.94, port: 5601, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇯🇵 日本-2.65MB/s(Youtube:不良林), server: 85.208.108.94, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
+  - {name: 🇨🇦 加拿大-720.5KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇳 中国-342.7KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34000, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-489.0KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34002, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-540.7KB/s(Youtube:不良林), server: in-us-1.onebox6.org, port: 38401, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-us-1.onebox6.org}}
+  - {name: 🇺🇸 美国-860.0KB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇳 中国-352.2KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34001, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-346.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-318.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-604.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-150.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-680.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-753.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.05MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.57MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.02MB/s(Youtube:不良林)
+      - 🇫🇷 法国-545.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.33MB/s(Youtube:不良林)
+      - 🇯🇵 日本-466.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.65MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-720.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-342.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-489.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-540.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-860.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-352.2KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-346.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-318.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-604.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-150.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-680.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-753.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.05MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.57MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.02MB/s(Youtube:不良林)
+      - 🇫🇷 法国-545.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.33MB/s(Youtube:不良林)
+      - 🇯🇵 日本-466.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.65MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-720.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-342.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-489.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-540.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-860.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-352.2KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-346.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-318.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-604.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-150.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-680.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-753.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.05MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.57MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.02MB/s(Youtube:不良林)
+      - 🇫🇷 法国-545.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.33MB/s(Youtube:不良林)
+      - 🇯🇵 日本-466.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.65MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-720.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-342.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-489.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-540.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-860.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-352.2KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-346.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-318.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-604.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-150.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-680.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-753.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.05MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.57MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.02MB/s(Youtube:不良林)
+      - 🇫🇷 法国-545.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.33MB/s(Youtube:不良林)
+      - 🇯🇵 日本-466.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.65MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-720.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-342.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-489.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-540.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-860.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-352.2KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-346.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-318.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-604.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-150.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-680.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-753.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.05MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.57MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.02MB/s(Youtube:不良林)
+      - 🇫🇷 法国-545.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.33MB/s(Youtube:不良林)
+      - 🇯🇵 日本-466.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.65MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-720.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-342.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-489.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-540.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-860.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-352.2KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-346.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-318.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-604.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-150.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-680.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-753.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.05MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.57MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.02MB/s(Youtube:不良林)
+      - 🇫🇷 法国-545.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.33MB/s(Youtube:不良林)
+      - 🇯🇵 日本-466.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.65MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-720.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-342.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-489.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-540.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-860.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-352.2KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-346.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-318.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-604.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-150.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-680.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-753.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.05MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.57MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.02MB/s(Youtube:不良林)
+      - 🇫🇷 法国-545.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.33MB/s(Youtube:不良林)
+      - 🇯🇵 日本-466.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.65MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-720.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-342.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-489.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-540.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-860.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-352.2KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
