--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇯🇵 日本-1.23MB/s(Youtube:不良林), server: 85.208.108.94, port: 7001, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
-  - {name: 🇯🇵 日本-2.41MB/s(Youtube:不良林), server: 85.208.108.94, port: 5000, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇨🇳 中国-313.8KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32000, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-1.69MB/s(Youtube:不良林), server: 85.208.108.94, port: 7307, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
-  - {name: 🇨🇳 中国-199.5KB/s(Youtube:不良林), server: in-us-1.onebox6.org, port: 38401, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-us-1.onebox6.org}}
-  - {name: 🇨🇳 中国-365.5KB/s(Youtube:不良林), server: 36.134.156.5, port: 65079, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 36.134.156.5}}
-  - {name: 🇨🇳 中国-380.4KB/s(Youtube:不良林), server: best02.downloadmovie.cn, port: 65067, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best02.downloadmovie.cn}}
-  - {name: 🇨🇳 中国-392.2KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65093, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
-  - {name: 🇯🇵 日本-2.59MB/s(Youtube:不良林), server: 85.208.108.94, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
+  - {name: 🇯🇵 日本-2.56MB/s(Youtube:不良林), server: 85.208.108.19, port: 9102, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
+  - {name: 🇯🇵 日本-1.13MB/s(Youtube:不良林), server: 85.208.108.94, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
+  - {name: 🇯🇵 日本-1.00MB/s(Youtube:不良林), server: 85.208.108.94, port: 6379, type: ss, cipher: aes-256-gcm, password: zDNVedRFPQexG9v}
   - {name: 🇯🇵 日本-836.5KB/s(Youtube:不良林), server: 85.208.108.94, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
+  - {name: 🇨🇳 中国-760.6KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32002, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-912.9KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32002, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-932.3KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32002, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-876.8KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33002, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇫🇷 法国-2.13MB/s(Youtube:不良林), server: 62.210.113.98, port: 6379, type: ss, cipher: aes-256-gcm, password: zDNVedRFPQexG9v}
+  - {name: 🇯🇵 日本-1.66MB/s(Youtube:不良林), server: 85.208.108.94, port: 6697, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-1.23MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.41MB/s(Youtube:不良林)
-      - 🇨🇳 中国-313.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.69MB/s(Youtube:不良林)
-      - 🇨🇳 中国-199.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-365.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-380.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-392.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.59MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.56MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.13MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.00MB/s(Youtube:不良林)
       - 🇯🇵 日本-836.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-760.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-912.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-932.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-876.8KB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.13MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.66MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇯🇵 日本-1.23MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.41MB/s(Youtube:不良林)
-      - 🇨🇳 中国-313.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.69MB/s(Youtube:不良林)
-      - 🇨🇳 中国-199.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-365.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-380.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-392.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.59MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.56MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.13MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.00MB/s(Youtube:不良林)
       - 🇯🇵 日本-836.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-760.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-912.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-932.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-876.8KB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.13MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.66MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-1.23MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.41MB/s(Youtube:不良林)
-      - 🇨🇳 中国-313.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.69MB/s(Youtube:不良林)
-      - 🇨🇳 中国-199.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-365.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-380.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-392.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.59MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.56MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.13MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.00MB/s(Youtube:不良林)
       - 🇯🇵 日本-836.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-760.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-912.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-932.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-876.8KB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.13MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.66MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇯🇵 日本-1.23MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.41MB/s(Youtube:不良林)
-      - 🇨🇳 中国-313.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.69MB/s(Youtube:不良林)
-      - 🇨🇳 中国-199.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-365.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-380.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-392.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.59MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.56MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.13MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.00MB/s(Youtube:不良林)
       - 🇯🇵 日本-836.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-760.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-912.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-932.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-876.8KB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.13MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.66MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇯🇵 日本-1.23MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.41MB/s(Youtube:不良林)
-      - 🇨🇳 中国-313.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.69MB/s(Youtube:不良林)
-      - 🇨🇳 中国-199.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-365.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-380.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-392.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.59MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.56MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.13MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.00MB/s(Youtube:不良林)
       - 🇯🇵 日本-836.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-760.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-912.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-932.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-876.8KB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.13MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.66MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-1.23MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.41MB/s(Youtube:不良林)
-      - 🇨🇳 中国-313.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.69MB/s(Youtube:不良林)
-      - 🇨🇳 中国-199.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-365.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-380.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-392.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.59MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.56MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.13MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.00MB/s(Youtube:不良林)
       - 🇯🇵 日本-836.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-760.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-912.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-932.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-876.8KB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.13MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.66MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-1.23MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.41MB/s(Youtube:不良林)
-      - 🇨🇳 中国-313.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.69MB/s(Youtube:不良林)
-      - 🇨🇳 中国-199.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-365.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-380.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-392.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.59MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.56MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.13MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.00MB/s(Youtube:不良林)
       - 🇯🇵 日本-836.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-760.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-912.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-932.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-876.8KB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.13MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.66MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
