--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇯🇵 日本-2.56MB/s(Youtube:不良林), server: 85.208.108.19, port: 9102, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
-  - {name: 🇯🇵 日本-1.13MB/s(Youtube:不良林), server: 85.208.108.94, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
-  - {name: 🇯🇵 日本-1.00MB/s(Youtube:不良林), server: 85.208.108.94, port: 6379, type: ss, cipher: aes-256-gcm, password: zDNVedRFPQexG9v}
-  - {name: 🇯🇵 日本-836.5KB/s(Youtube:不良林), server: 85.208.108.94, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
-  - {name: 🇨🇳 中国-760.6KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32002, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-380.4KB/s(Youtube:不良林), server: best02.downloadmovie.cn, port: 65067, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best02.downloadmovie.cn}}
+  - {name: 🇩🇪 德国-1.08MB/s(Youtube:不良林), server: 193.108.117.75, port: 8080, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇯🇵 日本-992.9KB/s(Youtube:不良林), server: 85.208.108.94, port: 8000, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇨🇳 中国-392.2KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65093, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
+  - {name: 🇯🇵 日本-1.97MB/s(Youtube:不良林), server: 85.208.108.94, port: 5000, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
   - {name: 🇨🇳 中国-912.9KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32002, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇨🇳 中国-932.3KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32002, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇨🇳 中国-876.8KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33002, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-2.56MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.13MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.00MB/s(Youtube:不良林)
-      - 🇯🇵 日本-836.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-760.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-380.4KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.08MB/s(Youtube:不良林)
+      - 🇯🇵 日本-992.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-392.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.97MB/s(Youtube:不良林)
       - 🇨🇳 中国-912.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-932.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-876.8KB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇯🇵 日本-2.56MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.13MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.00MB/s(Youtube:不良林)
-      - 🇯🇵 日本-836.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-760.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-380.4KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.08MB/s(Youtube:不良林)
+      - 🇯🇵 日本-992.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-392.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.97MB/s(Youtube:不良林)
       - 🇨🇳 中国-912.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-932.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-876.8KB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-2.56MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.13MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.00MB/s(Youtube:不良林)
-      - 🇯🇵 日本-836.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-760.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-380.4KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.08MB/s(Youtube:不良林)
+      - 🇯🇵 日本-992.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-392.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.97MB/s(Youtube:不良林)
       - 🇨🇳 中国-912.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-932.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-876.8KB/s(Youtube:不良林)
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇯🇵 日本-2.56MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.13MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.00MB/s(Youtube:不良林)
-      - 🇯🇵 日本-836.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-760.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-380.4KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.08MB/s(Youtube:不良林)
+      - 🇯🇵 日本-992.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-392.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.97MB/s(Youtube:不良林)
       - 🇨🇳 中国-912.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-932.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-876.8KB/s(Youtube:不良林)
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇯🇵 日本-2.56MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.13MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.00MB/s(Youtube:不良林)
-      - 🇯🇵 日本-836.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-760.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-380.4KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.08MB/s(Youtube:不良林)
+      - 🇯🇵 日本-992.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-392.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.97MB/s(Youtube:不良林)
       - 🇨🇳 中国-912.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-932.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-876.8KB/s(Youtube:不良林)
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-2.56MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.13MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.00MB/s(Youtube:不良林)
-      - 🇯🇵 日本-836.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-760.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-380.4KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.08MB/s(Youtube:不良林)
+      - 🇯🇵 日本-992.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-392.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.97MB/s(Youtube:不良林)
       - 🇨🇳 中国-912.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-932.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-876.8KB/s(Youtube:不良林)
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-2.56MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.13MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.00MB/s(Youtube:不良林)
-      - 🇯🇵 日本-836.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-760.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-380.4KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.08MB/s(Youtube:不良林)
+      - 🇯🇵 日本-992.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-392.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.97MB/s(Youtube:不良林)
       - 🇨🇳 中国-912.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-932.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-876.8KB/s(Youtube:不良林)
